--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,6 +30,8 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Rust Release binary
+      uses: rust-build/rust-build.action@v1.4.5
   build-windows:
     runs-on: windows-latest
     steps:
@@ -38,6 +40,8 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Rust Release binary
+      uses: rust-build/rust-build.action@v1.4.5
   build-macos:
     runs-on: macos-latest
     steps:
@@ -46,3 +50,5 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Rust Release binary
+      uses: rust-build/rust-build.action@v1.4.5
