--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,13 @@
 name = "clang_log"
 description = "Another log implementation"
 license = "MIT"
-version = "2.0.4"
+version = "2.0.5"
 edition = "2021"
 authors = ["DDAN"]
 rust-version = "1.80.0"
 documentation = "https://docs.rs/clang_log"
 readme = "README.md"
-repository = "https://github.com/DDAN-17/clang-log"
+repository = "https://github.com/DDAN-17/clang_log"
 keywords = ["clang", "log", "logging", "logger", "llvm"]
 categories = ["development-tools::debugging"]
 
